fix float-clearing on Firefox (tested on FF, Safari, Chrome and IE8)

--- a/war/css/pretty-printing.css
+++ b/war/css/pretty-printing.css
@@ -5,8 +5,8 @@
   - if an expr is wrapped, every element clears left
 */
 
-
 .replOutput * {float: left; padding-left: 10px;}
+.replOutput br{float: none;}
 .wrapped > * {clear: left;}
 
 /* Rationals, Parens, and first child after lParen NEVER have padding or clearing */
